<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_conn"
            android:icon="@drawable/customer"
            android:visible="true"
            android:title="@string/itm_connecter" />
        <item
            android:id="@+id/nav_inscrire"
            android:icon="@drawable/customer"
            android:visible="true"
            android:title="@string/itm_inscription" />
        <item
            android:id="@+id/nav_panier"
            android:icon="@drawable/cart"
            android:visible="false"
            android:title="@string/itm_panier" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:visible="false"
            android:title="@string/itm_deconn" />

    </group>

    <item android:title="À propos">
        <menu>
            <item
                android:id="@+id/nav_site"
                android:icon="@drawable/home"
                android:title="@string/itm_siteWeb" />
            <item
                android:id="@+id/nav_equipe"
                android:icon="@drawable/group"
                android:title="@string/itm_infoEquipe" />

        </menu>
    </item>

</menu>
